# agent-resources

./: README.md  pyproject.toml
.claude/skills/GenerateTransparentSvg/: README.md  SKILL.md
.claude/skills/GenerateTransparentSvg/scripts/: convert_to_svg.py
.claude/skills/frontend-ux/: README.md  SKILL.md
.claude/skills/frontend-ux/references/: accessibility.md  animation.md  component-patterns.md  design-system.md  output-template.md  performance.md  responsive-design.md
.claude/skills/frontend-ux/scripts/: contrast_check.ts  generate_component.ts  generate_tokens.ts
.claude/skills/svg-illustration/: README.md  SKILL.md
.claude/skills/svg-illustration/references/: style-guides.md  svg-syntax.md
docs/: index.html  mkdocs.yml
docs/docs/: create-your-own-repo.md  how-packaging-works.md  index.md  install-agent-resources.md  llms.txt  supported-platforms.md  what-is-agent-resources.md
docs/docs/concepts/: install-locations.md  references-and-paths.md  repository-structure.md  resource-types.md
docs/docs/getting-started/: first-steps.md  help.md  installation.md
docs/docs/guides/: creating-repo.md  creating-resources.md  installing-resources.md
docs/docs/reference/: cli.md  troubleshooting.md
docs/overrides/: main.html
src/agent-resources/: pyproject.toml
src/agent-resources/agent_resources/: exceptions.py  fetcher.py  github.py  scaffold.py
src/agent-resources/agent_resources/cli/: common.py
src/agr/: pyproject.toml
src/agr/agr/: exceptions.py  fetcher.py  scaffold.py
src/agr/agr/cli/: add.py  init.py  (+2 more)
src/skill_add/: cli.py  github.py
(+3 files in other folders)
