[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-add"
version = "0.1.0"
description = "Add Claude Code skills from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.scripts]
skill-add = "skill_add.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_add"]
